Code review and refactor