@@ -10,6 +10,7 @@ import eu.sblendorio.bbs.core.HtmlUtils;
 import eu.sblendorio.bbs.core.PetsciiThread;
 import eu.sblendorio.bbs.core.XModem;
 import net.sourceforge.droid64.d64.CbmException;
+import org.apache.commons.codec.CharEncoding;
 import org.apache.commons.text.WordUtils;
 
 import java.io.IOException;
@@ -29,6 +30,7 @@ import static java.lang.Integer.signum;
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
+import static org.apache.commons.codec.CharEncoding.UTF_8;
 import static org.apache.commons.collections4.CollectionUtils.isEmpty;
 import static org.apache.commons.collections4.MapUtils.isEmpty;
 import static org.apache.commons.lang3.StringUtils.*;
@@ -127,7 +129,7 @@ public class CsdbReleases extends PetsciiThread {
                 println();
                 println();
                 waitOn();
-                searchResults = searchReleaseEntries(URL_TEMPLATE + URLEncoder.encode(search, "UTF-8"));
+                searchResults = searchReleaseEntries(URL_TEMPLATE + URLEncoder.encode(search, UTF_8));
                 waitOff();
                 if (isEmpty(searchResults)) {
                     write(RED); println("Zero result page - press any key");
